# int4-kernel

./: .gitignore  CMakeLists.txt  setup.py  test.py  test_int2.py
int4_kernel/: __init__.py
int4_kernel.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
int4_kernel/include/: gemm.h  int4.h  quant.h
int4_kernel/src/: bindings.cpp  gemm.cu  quant.cu
